--- a/web/index.html
+++ b/web/index.html
@@ -26,23 +26,26 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/images/profile.jpg"/>
 
+    <!-- Styles -->
+    <link rel="stylesheet" type="text/css" href="styles.css">
+
     <title>flutter_resume_pdf</title>
     <link rel="manifest" href="manifest.json">
 </head>
-<body>0
+<body>
 
 <!-- Loading -->
-<div class="center">
-    <div class="lds-roller">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
+
+    <div class="sk-cube-grid center">
+        <div class="sk-cube sk-cube1"></div>
+        <div class="sk-cube sk-cube2"></div>
+        <div class="sk-cube sk-cube3"></div>
+        <div class="sk-cube sk-cube4"></div>
+        <div class="sk-cube sk-cube5"></div>
+        <div class="sk-cube sk-cube6"></div>
+        <div class="sk-cube sk-cube7"></div>
+        <div class="sk-cube sk-cube8"></div>
+        <div class="sk-cube sk-cube9"></div>
 </div>
 
 <!-- This script installs service_worker.js to provide PWA functionality to
