--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
     <link rel="icon" type="image/png" href="assets/images/profile.jpg"/>
 
     <!-- Styles -->
-    <link rel="stylesheet" type="text/css" href="styles.css">
+<!--    <link rel="stylesheet" type="text/css" href="styles.css">-->
 
     <title>flutter_resume_pdf</title>
     <link rel="manifest" href="manifest.json">
