--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
       Fore more details:
       * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
     -->
-    <base href="/flutter-resume-pdf/">
+    <base href="/flutter_resume_pdf/">
 <!--    <base href="$FLUTTER_BASE_HREF">-->
 
     <meta charset="UTF-8">
