--- a/web/index.html
+++ b/web/index.html
@@ -11,8 +11,8 @@
       Fore more details:
       * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
     -->
-    <base href="/flutter_resume_pdf/">
-<!--    <base href="$FLUTTER_BASE_HREF">-->
+<!--    <base href="/flutter_resume_pdf/">-->
+    <base href="$FLUTTER_BASE_HREF">
 
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
